crates/reinhardt-core/crates/macros/tests/ui/inject_with_scope.stderr
error: Type must be Injected<T> or OptionalInjected<T> when using #[inject]
 --> tests/ui/routes/fail/inject_with_scope.rs:7:58
  |
7 | async fn get_config(#[inject(scope = Singleton)] config: Arc<Config>) -> Result<(), ()> {
  |                                                          ^^^^^^^^^^^

error: Type must be Injected<T> or OptionalInjected<T> when using #[inject]
  --> tests/ui/routes/fail/inject_with_scope.rs:12:52
   |
12 | async fn get_data(#[inject(scope = Request)] data: Arc<Config>) -> Result<(), ()> {
   |                                                    ^^^^^^^^^^^

error: Type must be Injected<T> or OptionalInjected<T> when using #[inject]
  --> tests/ui/routes/fail/inject_with_scope.rs:18:64
   |
18 |     #[inject(scope = Singleton, cache = false)] singleton_config: Arc<Config>,
   |                                                                   ^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> tests/ui/routes/fail/inject_with_scope.rs:2:5
  |
2 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
